--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "porter-stemmer": "~0.9.1",
     "prop-types": "~15.8.1",
     "react": "~18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "~18.2.0",
     "react-final-form-hooks": "~2.0.2",
     "react-google-recaptcha": "~3.1.0",
