--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "porter-stemmer": "~0.9.1",
     "prop-types": "~15.8.1",
     "react": "~18.2.0",
+    "react-confetti": "^6.1.0",
     "react-countdown": "^2.3.5",
     "react-dom": "~18.2.0",
     "react-final-form-hooks": "~2.0.2",
@@ -44,6 +45,7 @@
     "react-select": "~5.8.0",
     "react-sortablejs": "~6.1.4",
     "react-textarea-autosize": "~8.5.3",
+    "react-use": "^17.5.0",
     "recharts": "~2.12.1",
     "redux": "~5.0.1",
     "snarkdown": "~2.0.0",
